--- a/curso-sass/modulo-scss/assets/buttons.css
+++ b/curso-sass/modulo-scss/assets/buttons.css
@@ -1,3 +1,27 @@
-.btn {
-  color: red;
+.btn, .btn-vermelho, .btn-laranja {
+  width: 200px;
+  cursor: pointer;
+  padding: 10px 0;
+  background: none;
+  border: none;
+  color: #fff;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+.btn-laranja {
+  background-color: var();
+}
+.btn-laranja:hover {
+  background-color: rgb(177, 132, 49);
+}
+
+.btn-vermelho {
+  background-color: red;
+}
+.btn-vermelho:hover {
+  background-color: rgb(168, 57, 57);
 }/*# sourceMappingURL=buttons.css.map */
